fixing 'Who can access' div design bug on all objects
Former-commit-id: 2afb9d9b4b2d930a36d7febb9df608407977020a [formerly 06e6995eb4b0cd3a53224f96d473443ec8977e04] [formerly d9cdbdc1c44793cf06927a59cd3bda7bcfef769a [formerly e32e566330c7509c636e91b33ff1c8d5b6f3dd4b]]
Former-commit-id: b391ab5975ec0caf2fc2f2800ce6619db53010c1 [formerly ca74f638503e3fb8bb78c1fabeafd2896d02e798]
Former-commit-id: 6fdc179bae9e70e26438b15681303bfa6e996266

--- a/templates/opportunit_new.html
+++ b/templates/opportunit_new.html
@@ -52,7 +52,7 @@
 
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-       <div class="showPage newPage col-md-9">
+       <div class="showPage newPage col-md-9 margin-bottom-15">
                      <div class="row">
               <div class="col-md-12">
               <!-- BEGIN PORTLET-->
@@ -123,7 +123,7 @@
                   <div class="row">
                     <div class="col-md-12">
                       <!-- BEGIN PORTLET-->
-                      <div class="portlet showPage">
+                      <div class="portlet showPage rightCardContent">
                         <div class="portlet-title line">
                           <div class="caption"><i class="fa fa-lock"></i>Who can access ?</div>
 
