--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -50,7 +50,7 @@
                     <button class="btn red newAccountBtn pull-right" ng-click="save(contact)">Create</button>
                     <div class="clearfix"></div>
                 </div>
-                <div class="showPage slimForm col-md-12">
+                <div class="showPage slimForm col-md-12 margin-bottom-15">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="row">
@@ -349,7 +349,7 @@
         <div class="col-md-3 ">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="portlet showPage">
+                    <div class="portlet showPage rightCardContent">
                         <div class="portlet-title line">
                             <div class="caption">
                                 <i class="fa fa-lock"></i>Who can access ?
