--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -40,7 +40,7 @@
           <button class="btn red newAccountBtn pull-right" ng-click="save(lead)">Create</button>
           <div class="clearfix"></div>
         </div>
-    <div class="showPage slimForm col-md-12">
+    <div class="showPage slimForm col-md-12 margin-bottom-15">
       <div class="row">
         <div class="col-md-12">
           <div class="row">
@@ -358,7 +358,7 @@
     <div class="col-md-3 ">
       <div class="row">
         <div class="col-md-12">
-          <div class="portlet showPage">
+          <div class="portlet showPage rightCardContent">
             <div class="portlet-title line">
               <div class="caption">
                 <i class="fa fa-lock"></i>Who can access ?
