--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -56,7 +56,7 @@
           <button class="btn red newAccountBtn pull-right" ng-click="save(opportunity)">Create</button>
           <div class="clearfix"></div>
         </div>
-       <div class="showPage slimForm col-md-12">
+       <div class="showPage slimForm col-md-12 margin-bottom-15">
             <div class="row">
             <div class="col-md-12">
             <div class="row">
@@ -306,7 +306,7 @@
                   <div class="row">
                     <div class="col-md-12">
                       <!-- BEGIN PORTLET-->
-                      <div class="portlet showPage">
+                      <div class="portlet showPage rightCardContent">
                         <div class="portlet-title line">
                           <div class="caption"><i class="fa fa-lock"></i>Who can access ?</div>
 
