perfiction of linkedid profile recuperation
Former-commit-id: 10c47211e12701183bd0cfd32bd8545bb443af0d [formerly f4763636fbb3296849c95763ef0d3af8549dd086] [formerly 78f3018bfa5071510e49aece03432e181ac7147c [formerly d1490fb920d808caa15093ce7976d738c667e0c6]]
Former-commit-id: 040664f77b126884d6b8a59c5c1b010ede2c9842 [formerly 7920fbad0609e72ebf3d6510a25f9a45cd88e5ac]
Former-commit-id: 8eb795fa521ec4693b1aaec1685ae1f27b5e395b

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -796,7 +796,13 @@
                                                     </div>
                                                 </div>
                                                 <div class="news-blocks blank-card blank-card-yellow newsCard">
-                                                    <div id="gmap_canvas" style="width:100%;height:300px;"></div>
+                                                    <h3>Skills</h3>
+                                                   
+                                                    <ul class="list-unstyled contact-infos">
+                                                    <li ng-repeat="skill in linkedinProfile.skills">
+                                                      - <%=skill%>   
+                                                    </li>
+                                                    </ul>
                                                 </div>
                                             </div>
                                         </div>
