--- a/templates/accounts/note_show.html
+++ b/templates/accounts/note_show.html
@@ -71,8 +71,7 @@
           <div class="col-md-10">
             <div class="row">
               <div class="col-md-12">
-                <span class="topic-content">
-                  <%= note.content %>
+                <span class="topic-content" ng-bind-html-unsafe="note.content">                  
                 </span>
                 <ul class="chats">
                   <li class="in" ng-repeat="comment in comments" id="comment_<%=$index%>">
