--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,10 @@
 <!--[if IE 9]> <html lang="en" class="ie9" > <![endif]-->
 <!--[if !IE]><!--> <html xmlns:ng="http://angularjs.org"> <!--<![endif]-->
 <!-- BEGIN HEAD -->
-<head>
+<head profile="http://www.w3.org/2005/10/profile" >
+  <link rel="icon" 
+      type="image/png" 
+      href="http://example.com/myicon.png">
   <meta charset="utf-8" />
   <title>i/oGrow Engine Platform</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
