Enhance the invite user page fix #848
Former-commit-id: 6612c9050e50df1989c98d2bce787d22122aa8f0 [formerly 1d6ce6f8d99bc0fe2cdb08e4371e1b3e4a35fb27] [formerly 5c5079a31b56b8a0947085599f4f92a8219a2802 [formerly 53472a2173ba0e8015fa3a8ee41a07843f1298f9]]
Former-commit-id: 400411ce582c98625605e2c7a09aeafbe630adc9 [formerly 25bc18e8a5832b1b2fa034384da025f71d84866b]
Former-commit-id: 14ed69cbbcb498ad14f8053ab6ce6461b93181e8

--- a/templates/admin/imports/import_list.html
+++ b/templates/admin/imports/import_list.html
@@ -57,7 +57,7 @@
 
                 <div class="text">
                   <div class="name">
-                    <a href="/#/admin/import/new" class="profile-link">
+                    <a href="/#/admin/imports/new" class="profile-link">
                         Highrise
                     </a>
 
