--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -41,8 +41,12 @@
   </div>
   <div class="row" ng-show="isSignedIn">
     <div class="col-md-9">
-      <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red newBtn">
-        {{ _("New User") }}
+    
+      <button   id="sample_editable_1_new" class="btn red newBtn">
+
+       <a href="/#/admin/users/new" >
+                      New User    
+                    </a>
       </button>
     </div>
     <div class="col-md-9">
