enhance interface of invite users
Former-commit-id: 45d42c6960f650227a3b6a86499ed0470821b014 [formerly 94708bf5843804ed9688a4ee48bf064c827d1b5d] [formerly c5210485b1cf76d21bdf7db989bfbf4fc103b16a [formerly d276871100e92d8746053931d095d0cb8744dd9a]]
Former-commit-id: 94a58e3afa7ea7950864262e478a8282e497dc9b [formerly b2be80f769ed8d947c10a08d12af04eb95ca4164]
Former-commit-id: c3f14ed0589e5fe18bf1ac6f966d86b4c36a6eba

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -42,12 +42,11 @@
   <div class="row" ng-show="isSignedIn">
     <div class="col-md-9">
     
-      <button   id="sample_editable_1_new" class="btn red newBtn">
-
-       <a href="/#/admin/users/new" >
+   
+       <a class="btn red newBtn" href="/#/admin/users/new" >
                       New User    
                     </a>
-      </button>
+
     </div>
     <div class="col-md-9">
      <div class="row">
