adding owner schema to contacts.get api
Former-commit-id: ca4f0d4e2bbb2c04f217911843434bbb0bef6a2c [formerly 1906d5cd7d7b500fd33e1df26a0c476187ead0f0] [formerly 8cbe793aada22ea354b9f3245bad2d5bd47395c7 [formerly 5960096ee3f1c41c1e361729a3fc61bb5734d482]]
Former-commit-id: 75785f8e090f816bd78088724117058bdaa740a4 [formerly f51f543e5aa83c470dd6cb803b31af2cc97a335f]
Former-commit-id: 50e7a41959e8ceb146b90fc468dfe2956da4342f

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -89,13 +89,24 @@
                         </a>
                       </span>
                     </li>
-                    <li ng-show="contact.Paccount.name">
+                    <li ng-show="contact.account.name">
                       <span>
                         Company:
-                        <a class="tag ng-binding" href="/#/search/type:Contact  #<%= contact.account.name %>">
+                        <a class="tag ng-binding" href="/#/search/type:Contact  contacts:<%= contact.account.id %>">
                           #<%= contact.account.name %>
                         </a>
                       </span>
+                    </li>
+                    <li>
+                      <span>
+                        created by:
+                        <a class="tag ng-binding" href="/#/search/type:Contact owner:<%= contact.owner.google_user_id %>">
+                          #<%= contact.owner.google_display_name %>
+                        </a>
+                      </span>
+                    </li>
+                    <li>
+                      <span class="contact-title" >Last updated:  <%=fromNow(contact.updated_at)%> </span>
                     </li>
                     <li>
                         <br>
@@ -893,7 +904,7 @@
                             <span class="relatedEventStartsAt pull-right" ng-hide="showDetails" ng-show="task.due" title="<%= task.due| date:'yyyy-MM-dd '%>">
                                   <%= task.due | date:'dd MMM'%>
                             </span>
-                          </div>  
+                          </div>
                           <div class="moreDetails row" ng-show="showDetails">
                           <!--  <div class="col-md-6 col-xs-6 event-schedule">
                                 <span class=""><i class="fa fa-calendar"></i>
@@ -901,13 +912,13 @@
                             </div>
                             <div class="col-md-6 col-xs-6 event-schedule">
                                <span class="">
-                                  <i class="fa fa-bell-o"></i> 
+                                  <i class="fa fa-bell-o"></i>
                                   <%= task.reminder | date:'dd MMM'%>
                                 </span>
                             </div>
                             <div class="col-md-12">
                                <span class="">
-                                  <i class="fa fa-map-marker"></i> 
+                                  <i class="fa fa-map-marker"></i>
                                   <%= event.where %>-->
                                 <!--</span>
                             </div>-->
