add owner shcema to leads.get api
Former-commit-id: c373e0a5fbd33de25cab39c80120614f9f094f8e [formerly 4d655b47af35b222b573d5e6ded0645abc54e31c] [formerly 13b0d8f9ef251b26880443a45f488bcaf0257434 [formerly 5873299a82dac53d899d371d3ee7df3b7e78ef4e]]
Former-commit-id: 5762b3a7f1d8bc86ce013aa5ca6040321526852a [formerly 71e49240d968a44eca596269d12f04c624d1b58f]
Former-commit-id: b7d54f8fdec4b2d90a4cd30a7997940b86affd39

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -89,7 +89,7 @@
                         </a>
                       </span>
                     </li>
-                    <li ng-show="contact.account.name">
+                    <li ng-show="contact.account">
                       <span>
                         Company:
                         <a class="tag ng-binding" href="/#/search/type:Contact  contacts:<%= contact.account.id %>">
@@ -99,7 +99,7 @@
                     </li>
                     <li>
                       <span>
-                        created by:
+                         Owner:
                         <a class="tag ng-binding" href="/#/search/type:Contact owner:<%= contact.owner.google_user_id %>">
                           #<%= contact.owner.google_display_name %>
                         </a>
