--- a/templates/accounts/note_show.html
+++ b/templates/accounts/note_show.html
@@ -29,7 +29,7 @@
   </div>
   <div class="container" ng-show="immediateFailed">
     <div class="col-md-12">
-       
+
       <span id="signin">
         <span id="myGsignin"></span>
       </span>
@@ -71,8 +71,7 @@
           <div class="col-md-10">
             <div class="row">
               <div class="col-md-12">
-                <span class="topic-content">
-                  <%= note.content %>
+                <span class="topic-content" ng-bind-html-unsafe="note.content">
                 </span>
                 <ul class="chats">
                   <li class="in" ng-repeat="comment in comments" id="comment_<%=$index%>">
@@ -99,7 +98,7 @@
                     </div>
                     <div class="pull-right">
                       <input  ng-click="addComment(comment)" ng-disabled="!comment.content"  type="submit" class="btn green" value="Add comment">
-                     
+
                     </div>
                   </form>
               </div>
@@ -232,7 +231,7 @@
 
                         </div>
                     </div>
-                   
+
                 </form>
             </div>
             <div class="modal-footer">
@@ -263,7 +262,7 @@
               <input  ng-click="deletenote()" type="submit" class="btn red" value="Delete this note" data-dismiss="modal" aria-hidden="true">
               <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
             </div>
-            
+
              </div>
              </div>
      </div>
