--- a/templates/admin/imports/import_new.html
+++ b/templates/admin/imports/import_new.html
@@ -1,25 +1,29 @@
 <div class="row subHeader">
     <div class="currentApp">
-        <h2 class="page-title">
-            <!-- <img class="platform_icons" height="25" width="25" src="/static/img/admin_console.png"> -->
+         <div class="btn-group">
+           <a class="filterItem" href="#" data-toggle="dropdown" >
             {{active_app.label}}
-        </h2>
+            <i class="icon-angle-down"></i>
+           </a>
+           <ul class="dropdown-menu">
+            {%for application in apps %}
+
+                  <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal">{{application.label}}</a></li>
+
+            {%endfor%}
+           </ul>
+        </div>
     </div>
     <div class=" subHeaderContent">
         <div class="col-md-9">
             <h2 class="page-title">
-                <a href="/#/contacts" data-toggle="tooltip" data-placement="bottom" title="Back to contacts">
+                <a href="/#/admin/imports" data-toggle="tooltip" data-placement="bottom" title="Back to contacts">
                     <img onload="this.__gwtLastUnhandledEvent = & quot;
                             load & quot;
                             ;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false">
                 </a>
-                {{_("Contacts")}} >
-                <a editable-text="contact.firstname" onbeforesave="inlinePatch('Contact','', 'firstname',contact.entityKey,$data)">
-                    <%= contact.firstname %>
-                </a>
-                <a editable-text="contact.lastname" onbeforesave="inlinePatch('Contact','', 'lastname',contact.entityKey,$data)" >
-                    <%= contact.lastname %>
-                </a>
+                {{_("Imports")}} >
+                
             </h2>
             <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="save(contact)">Create</button>
         </div>
